test/cases/compile_errors/refer_to_the_type_of_a_generic_function.zig
export fn entry() void {
    const Func = fn (type) void;
    const f: Func = undefined;
    f(i32);
}

// error
// backend=stage2
// target=native
//
// :4:6: error: use of undefined value here causes undefined behavior
